--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html> <!-- Ви працюєте з 5-ю версією HTML-->
+<html lang="en"> <!-- Ви починаєтє писати HTML код -->
    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
    </head>
-   <body>  
-      Моя первая веб-страница jav
+   <body>
+      My site java
    </body>
 </html>
