lesson 5 ukraine  index.html

--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -26,7 +26,7 @@
       друге за ліком сценічне прочитання «Лісової пісні» театральний та кіно режисер, драматург та скульптор Іван
       Кавалерідзе на сцені Українського драматичного театру Роменської «Просвіти» (художник – Євдоким Минюра). Твір є
       одним з перших прообразів фентезі в українській літератур <sup><a
-            href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F#cite_note-1">[1]</a></sup>.
+            href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F#cite_note-1">[1]</a><a href=""></a></sup>.
    </p>
    <h2>Історія створення</h2>
    <hr>
