--- a/ukranian/index.html
+++ b/ukranian/index.html
@@ -1,10 +1,217 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ukraine</title>
 </head>
+
 <body>
-    
+    <h1>Україна</h1>
+    <hr>
+    <span>Матеріал з Вікіпедії — вільної енциклопедії.</span>
+    <br>
+    <p>
+        <b>Украї́на</b> (МФА: [ʊkrɐˈjɪn̪ɐ] ( прослухати)) — <a
+            href="https://uk.wikipedia.org/wiki/%D0%94%D0%B5%D1%80%D0%B6%D0%B0%D0%B2%D0%B0">держава</a>, розташована у
+        Східній Європі, охоплює південний захід
+        Східноєвропейської рівнини, частину <a
+            href="https://uk.wikipedia.org/wiki/%D0%A1%D1%85%D1%96%D0%B4%D0%BD%D1%96_%D0%9A%D0%B0%D1%80%D0%BF%D0%B0%D1%82%D0%B8">Східних
+            Карпат</a> і Кримські гори. Межує з Румунією і Молдовою на південному
+        заході, з Угорщиною, Словаччиною та Польщею на заході, з Білоруссю на півночі та з Росією на сході й північному
+        сході. На півдні омивається Чорним та Азовським морями. Площа становить 603 700 км²[6]. Найбільша за площею
+        країна серед повністю розташованих у <a
+            href="https://uk.wikipedia.org/wiki/%D0%84%D0%B2%D1%80%D0%BE%D0%BF%D0%B0">Європі</a><sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-7">[7]</a></sup>.
+    </p>
+    <p>
+        Станом на останній перепис (2001), населення України становило 48,4 мільйона осіб<sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%BF%D0%B5%D1%80%D0%B5%D0%BF%D0%B8%D1%81-8">[8]</a></sup>.
+        Основне й корінне
+        населення <b>України</b> — це українці<sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-9">[9]</a><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-10">[10]</a>
+        </sup>(77,8 % населення на 2001 рік<sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%BF%D0%B5%D1%80%D0%B5%D0%BF%D0%B8%D1%81-8">[8]</a></sup>).
+        Також офіційно корінними народами
+        України є кримські татари, караїми та кримчаки[11]. Крім того, значною меншиною є росіяни (17,3 % населення на
+        2001 рік[8]). Історично однією з найбільших меншин в Україні були також <a
+            href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D1%96_%D1%94%D0%B2%D1%80%D0%B5%D1%97">українські
+            євреї</a>. <sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-chorny-12">[12]</a></sup>
+    </p>
+    <p>
+        Сучасна Україна, обравши за свій герб знак княжої держави <a
+            href="https://uk.wikipedia.org/wiki/%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%A1%D0%B2%D1%8F%D1%82%D0%BE%D1%81%D0%BB%D0%B0%D0%B2%D0%B8%D1%87">Володимира
+            Великого</a><sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%B3%D0%B5%D1%80%D0%B1-13">[13]</a></sup>,
+        проводить свою державність
+        від Русі київських князів династії Рюриковичів IX—XIII століть <sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%AF%D0%BA%D0%BE%D0%B2%D0%B5%D0%BD%D0%BA%D0%BE-14">[14]</a></sup>.
+        За часів свого розквіту, у X—XI століттях,
+        Русь була однією з найбільших і найвпливовіших країн Європи[14]. Після монгольської навали спадкоємцем Русі
+        стало Королівство Руське XIII—XIV століть[14], що згодом було поглинуте Великим князівством Литовським і
+        Королівством Польським. Велике князівство Литовське стало фактичним продовжувачем традицій Русі. <sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-15">[15]</a></sup>
+        Руські
+        землі в складі Великого Князівства Литовського користувалися широкою автономією[16]. Після об'єднання литовської
+        та польської держав у 1569 році, більшість українських земель перебувало у складі федеративної Речі Посполитої.
+
+    </p>
+    <p>
+        Відновлення української державності відбулося під час великого <a
+            href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B5_%D0%BA%D0%BE%D0%B7%D0%B0%D1%86%D1%82%D0%B2%D0%BE">козацького
+            повстання</a>, відомого як Хмельниччина, з
+        1648 року[14][17], наслідком якого стало утворення автономної козацької держави, Гетьманщини, або <a
+            href="https://uk.wikipedia.org/wiki/%D0%92%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%BE_%D0%97%D0%B0%D0%BF%D0%BE%D1%80%D0%BE%D0%B7%D1%8C%D0%BA%D0%B5">Війська
+            Запорозького</a>. Обмежену автономність Гетьманщина зберігала до 1764 року, при тому частина земель відійшла
+        до Речі
+        Посполитої, а інша частина знаходилася під протекторатом Московії, які поступово поглинули козацьку державу.
+        Згодом українські землі були розділені між Російською імперією та Австро-Угорською монархією.
+    </p>
+    <p>
+        Державою кримських татар, одного з корінних народів України[11], був Кримський ханат, що існував на південних
+        українських землях у 1441—1783 роках за правління династії Ґіреїв. У 1783 році був анексований Російською
+        імперією. <sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%95%D0%86%D0%A3-18">[18]</a><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-%D0%94%D0%BE%D0%BC-19">[19]</a></sup>
+    </p>
+    <p>
+        Під час <a
+            href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D1%80%D0%B5%D0%B2%D0%BE%D0%BB%D1%8E%D1%86%D1%96%D1%8F_(1917%E2%80%941921)">української
+            революції початку XX століття</a> на українських землях постало декілька національних держав,
+        перш за все Українська Народна Республіка (УНР, 1917—1921), а також Українська Держава (1918), Західноукраїнська
+        Народна Республіка (1918—1919) та Кубанська Народна Республіка (1918— <a
+            href="https://uk.wikipedia.org/wiki/1920">1920</a>) <sup><a
+                href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0#cite_note-20">[20]</a></sup>.
+        УНР наближалася до об'єднання у
+        своєму складі усіх зазначених держав, але внаслідок низки воєн була загарбана сусідами: Радянською Росією,
+        Польською Республікою, Королівством Румунія і Чехословацькою Республікою.
+    </p>
+    <p>
+        З 1919 року, спочатку на східних українських землях зі столицею у Харкові, почала створюватися більшовицька
+        <a
+            href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D0%A0%D0%B0%D0%B4%D1%8F%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D0%A1%D0%BE%D1%86%D1%96%D0%B0%D0%BB%D1%96%D1%81%D1%82%D0%B8%D1%87%D0%BD%D0%B0_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D1%96%D0%BA%D0%B">Українська
+            Соціалістична Радянська Республіка</a> (УСРР, згодом УРСР), яка у 1922 році ввійшла до складу Радянського
+        Союзу. Київ став столицею УРСР у 1934 році. Під час Другої світової війни до УРСР були приєднані частина
+        Західної України й Буджак, згодом Закарпаття, а з 1954 року — Крим.
+    </p>
+    <p>
+        Сучасна держава Україна відновила незалежність внаслідок розпаду Радянського Союзу й проголошення незалежності
+        24 серпня 1991 року, яке закріпив референдум 1 грудня 1991 року.
+    </p>
+    <p>
+        Україна — унітарна держава, складається з 24 областей, Автономної Республіки Крим і двох міст зі спеціальним
+        статусом: Києва — столиці й найбільшого міста, і <a
+            href="https://uk.wikipedia.org/wiki/%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C">Севастополя</a>.
+    </p>
+    <p>
+        Україна є парламентсько-президентською республікою. Органом законодавчої влади є Верховна Рада України, яка
+        призначає вищий орган виконавчої влади — Кабінет Міністрів України, що очолюється Прем'єр-міністром. Главою
+        держави та Верховним Головнокомандувачем є Президент України.
+
+        Більшість громадян України є християнами, переважно <a
+            href="https://uk.wikipedia.org/wiki/%D0%9F%D1%80%D0%B0%D0%B2%D0%BE%D1%81%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0_%D1%86%D0%B5%D1%80%D0%BA%D0%B2%D0%B0">православного
+            віросповідання</a>, хоча на заході України також
+        поширений греко-католицизм.[21][22] Релігіями корінних народів України є також іслам, юдаїзм і караїмізм. До
+        прийняття християнства Руссю в 988 році панівною була язичницька слов'янська релігія.
+    </p>
+    <p>
+        Україна — промислово-аграрна країна з переважанням продукування сировини. Вона є одним із провідних експортерів
+        деяких різновидів <a
+            href="https://uk.wikipedia.org/wiki/%D0%A1%D1%96%D0%BB%D1%8C%D1%81%D1%8C%D0%BA%D0%B5_%D0%B3%D0%BE%D1%81%D0%BF%D0%BE%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%BE_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8">сільськогосподарської
+            продукції</a>. Господарський комплекс країни включає видобування корисних
+        копалин, деякі галузі машинобудування, чорну й кольорову металургію тощо. Україна є потужним виробником
+        електроенергії. Значні позиції займає виробництво військової техніки та зброї.
+    </p>
+    <p>
+        Україна є одним із членів-засновників Організації Об'єднаних Націй[23], а також членом понад сорока міжнародних
+        організацій, зокрема ОБСЄ (1992), МВФ (1992), МБРР (1992), СОТ (2008), Ради Європи (1995), кандидат на членство
+        в ЄС (з 2022).
+    </p>
+    <p>
+        З 20 лютого 2014 року Україна захищається від збройного вторгнення Російської Федерації, складовими якого є
+        анексія Криму та окупація частини Донецької та Луганської областей. Новий етап російсько-української війни
+        розпочався 24 лютого 2022 року з <a
+            href="https://uk.wikipedia.org/wiki/%D0%A0%D0%BE%D1%81%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B5_%D0%B2%D1%82%D0%BE%D1%80%D0%B3%D0%BD%D0%B5%D0%BD%D0%BD%D1%8F_%D0%B2_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%83_(2022)">широкомасштабним
+            російським вторгненням в Україну</a>.
+    </p>
+    <h2>Назва</h2>
+    <hr>
+    <h3>Русь</h3>
+    <i>Докладніше: Русь, Росія (назва) та Україна-Русь</i>
+    <p>
+        Найдавніша відома згадка слова «Русь» як географічної назви має місце у візантійсько-руському договорі 911 року,
+        де вона використана на позначення держави і території підвладної київському князю Олегу (що на той час
+        обмежувалося переважно околицями Києва)[26][27]. В подальшому назва «Русь» використовувалася на позначення
+        земель, на які поширювалася влада київських князів, у вузькому значенні лише щодо Середнього Придніпров'я
+        (Київське, Чернігівське, Переяславське князівства), у ширшому — на значну частину Східної Європи, при цьому
+        землі за межами Наддніпрянщини в низці джерел означалися як «Зовнішня Русь»[26][27]. Одночасно у Візантії на
+        означення Русі використовувалося, серед інших назв, еллінізоване слово «Росія» («Ρωσία»)[26][28]. Після занепаду
+        Русі внаслідок монгольської навали, у XIII-XIV століттях назву «Королівство Русь» певний час носила
+        Галицько-Волинська держава[29], протягом 1398—1569 років слово «Русь» використовувалося в повній назві
+        Литовської держави[30] і протягом 1434–1772 років назву «Руське воєводство» носила Галичина у складі Королівства
+        Польського та Речі Посполитої[31]. Московія не претендувала прямо на загальний спадок Русі та не використовувала
+        це слово у назві своєї держави доки Іван IV у 1547 році не почав називати себе, серед інших титулів, «царь и
+        великий князь всеа Русии», після чого до Московії в деяких документах, окрім як «Московське царство», почали
+        застосовуватися також назви «Російське царство» або «Росія»[28]. Закріпив цю назву за Московією Петро I,
+        отримавши контроль над лівобережною Гетьманщиною та Києвом і перейменувавши Московське царство на Російську
+        імперію у 1721 році[28]. До цих подій київські та московські землі не перебували у складі однієї держави
+        протягом близько 500 років у XIII-XVIII століттях. Низка істориків згодом характеризували таке запозичення як
+        безпідставне привласнення Московією назви та історії України-Русі. Серед тих, хто відстоював правомірність
+        використання назви «Русь» лише стосовно України, але не Росії-Московії, був анонімний автор впливової праці
+        початку XIX століття «Історія Русів»[32]. Згодом аналогічну позицію детально обґрунтував Михайло Грушевський,
+        зокрема зазначаючи, що «ми є народ у якого вкрали назву», на підкреслення чого назвав свою найбільшу працю
+        «Історія України-Руси». Поділяє таку думку й багато сучасних дослідників.[32][33][34][35]
+    </p>
+    <h3>Україна</h3>
+    <i>Докладніше: <a
+            href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0_(%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0)">Україна
+            (назва)</a></i>
+    <p>
+        Слов'янське слово «Україна» вперше згадується в Київському літописному зводі за Іпатіївським списком під 1187
+        роком[36]. Ним окреслювали терени Переяславського князівства, що входило до історичного ядра Русі поруч із
+        Київським і Чернігівським князівствами. Це слово також зустрічається в руських літописах під 1189, 1213, 1280 і
+        1282 роками[36], позначаючи Галичину, Західну Волинь, Холмщину й Підляшшя. У литовських і польських хроніках та
+        офіційних документах XIV—XVII століття «Україною» в широкому значенні називали руські землі Галичини, Волині,
+        Київщини, Поділля й Брацлавщини, а у вузькому — територію Середнього Подніпров'я[37]. Таке ж двояке значення
+        цього слова зберігалося й із середини XVII століття, після постання руської держави Війська Запорозького[38].
+
+        У зв'язку з входженням частини земель Русі до складу Московського царства, а згодом і Російської імперії, слово
+        «Україна» закріпилося за регіоном Подніпров'я; ним також позначали Слобожанщину. Після перейменування
+        Московського царства на Російську імперію 1721 року, українські землі почали називати «Малоросією». У другій
+        половині XIX століття — початку XX століття, під впливом національного руху руської інтелігенції, назва
+        «Україна» набирала значення руської етнічної території, а сам етнонім «русини» був витіснений етнонімом
+        «українці»[37]. 1917 року була проголошена перша держава, яка використала слово «Україна» у своїй офіційній
+        назві, — Українська Народна Республіка.
+
+        Етимологія слова «Україна» достеменно не відома. Згідно з теорією, якої дотримуються більшість українських
+        дослідників, «Україна» походить від слів «країна» чи «край», тобто «у» означає «рідний», «свій». Таким чином
+        «україна» — антонім слова «чужина».[39][40]. Згідно однієї з інших теорій, що утворилася під впливом польської
+        та російської історіографії, воно означає «околицю» (рос. окраину) чи «прикордоння».
+    </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Carte_d%27Ukranie_by_Beauplan%2C_Guillaume_Le_Vasseur_%2816..-1673%29%2C_cartographer.jpg/300px-Carte_d%27Ukranie_by_Beauplan%2C_Guillaume_Le_Vasseur_%2816..-1673%29%2C_cartographer.jpg"
+        alt="Французька карта України (" Carte d'Ukranie") Боплана 1648 року (південь зверху)">
+    <h2>Географія та природа</h2>
+    <hr>
+    <i>Докладніше: Географія України та Географічне положення України</i>
+    <h3>Розташування</h3>
+    <i>Докладніше: Територія України та Крайні точки України</i>
+    <p>
+        Україна розташована в південно-східній частині Європи[6]. Вона має спільні сухопутні державні кордони з
+        Білоруссю на півночі, з Польщею на заході, зі Словаччиною, Угорщиною, Румунією і Молдовою на південному заході й
+        із Росією на сході. Південь України омивається Чорним та Азовським морями. Морські кордони вона має з Румунією і
+        Росією.
+
+        Загальна площа України становить 603 700 км², вона становить 5,7 % території Європи й 0,44 % території світу. За
+        цим показником вона є другою за величиною серед країн Європи після Росії (або найбільшою країною, яка повністю
+        лежить у Європі). Площа виключної морської економічної зони України становить 72 658 км². Код країни за системою
+        ISO 3166-1-alpha-2 — UA[41]. Територія України витягнута із заходу на схід на 1316 км і з півночі на південь на
+        893 км, лежить приблизно між 52° 20′ та 44° 23′ північної широти й 22° 5′ і 41° 15′ східної довготи.
+    </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Vkraina-Cosaques-Okraina_small.png/250px-Vkraina-Cosaques-Okraina_small.png"
+        alt="Італійська карта Вінченцо Марія Коронеллі 1690 року, де обидва береги Наддніпрянщини з Києвом позначені як «VKRAINE ou PAYS DES COSAQVES» («Україна або Країна козаків»); слово «OKRAINA» («Окраїна») вжито стосовно Задоння й Рязані">
+
 </body>
+
 </html>
