--- a/ukranian/index.html
+++ b/ukranian/index.html
@@ -208,10 +208,55 @@
         лежить у Європі). Площа виключної морської економічної зони України становить 72 658 км². Код країни за системою
         ISO 3166-1-alpha-2 — UA[41]. Територія України витягнута із заходу на схід на 1316 км і з півночі на південь на
         893 км, лежить приблизно між 52° 20′ та 44° 23′ північної широти й 22° 5′ і 41° 15′ східної довготи.
+        Крайній північний пункт — село Грем'яч (урочище Петрівське) Чернігівської області.
+    <ul>
+        <li>Крайній південний пункт — смт Форос Автономної Республіки Крим.</li>
+        <li>Крайній західний пункт — село Соломоново Закарпатської області.</li>
+        <li>Крайній східний пункт — село Рання Зоря Луганської області.</li>
+        <li>Географічний центр України розташований на північній околиці села Мар'янівка Звенигородського району
+            Черкаської області[42].</li>
+        <li>Згідно з однією з методик вимірювання[43], географічний центр Європи розташований на території України,
+            неподалік міста Рахів Закарпатської області.</li>
+    </ul>
+
     </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Vkraina-Cosaques-Okraina_small.png/250px-Vkraina-Cosaques-Okraina_small.png"
         alt="Італійська карта Вінченцо Марія Коронеллі 1690 року, де обидва береги Наддніпрянщини з Києвом позначені як «VKRAINE ou PAYS DES COSAQVES» («Україна або Країна козаків»); слово «OKRAINA» («Окраїна») вжито стосовно Задоння й Рязані">
+    <h3>Судова влада</h3>
+    <p>
+        Правосуддя в Україні здійснюється винятково судами. Юрисдикція судів поширюється на всі правовідносини, що
+        виникають у державі. Система судів загальної юрисдикції відповідно до Конституції України будується за
+        принципами територіальності, спеціалізації та інстанційності. Суди загальної юрисдикції складаються з місцевих,
+        апеляційних, вищих спеціалізованих судів та Верховного Суду України. Найвищим судовим органом у системі судів
+        загальної юрисдикції є Верховний Суд України.
+    </p>
+        <ul>Спеціалізовані суди:
+            <li>Господарські (обласні, апеляційні, касаційний)</li>
+            <li>Адміністративні (окружні, апеляційні, касаційний).</li>
+        </ul>
 
+    <h3>Політичні партії</h3>
+    <p>
+        Докладніше: Українські політичні партії, Політичні партії України, Верховна Рада України VIII скликання та
+        Верховна Рада України VII скликання
+        Україна має багатопартійну систему, і станом на 18 січня 2017 року в країні зареєстровано 252 політичні
+        партії[176]. Через високу чисельність політичні партії не часто мають шанс отримати владу поодинці, тому вони
+        часто утворюють блоки. 17 листопада 2011 року український парламент схвалив закон про вибори, що заборонив
+        участь блоків політичних партій на парламентських виборах. Багато партій в Україні мають дуже маленькі членства
+        і невідомі широкому загалу. Довіра українського суспільства до політичних партій, у цілому, дуже низька.[177].
+
+        Станом на грудень 2011 року в Україні була відсутня політична партія «всеохопного типу»[178][179]. Сучасні
+        українські партії не мають виразника всеохопної національної ідеї[177], а цивілізаційні та геостратегічні
+        орієнтації відіграють важливішу роль, ніж економічні і соціально-політичні програми, що зумовило появу партій
+        проросійської та прозахідної (проєвропейської) спрямованости[180].
+    </p>
+    <ul>Наразі в українському парламенті є такі фракції політичних партій:
+        <li>Фракція політичної партії «Слуга народу»</li>
+        <li>Фракція політичної партії «Опозиційна платформа — За життя»</li>
+        <li>Фракція політичної партії «Європейська Солідарність»</li>
+        <li>Фракція політичної партії "Всеукраїнське об'єднання «Батьківщина»</li>
+        <li>Фракція політичної партії «Голос»</li>
+    </ul>
 </body>
 
 </html>
