--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -26,7 +26,8 @@
       друге за ліком сценічне прочитання «Лісової пісні» театральний та кіно режисер, драматург та скульптор Іван
       Кавалерідзе на сцені Українського драматичного театру Роменської «Просвіти» (художник – Євдоким Минюра). Твір є
       одним з перших прообразів фентезі в українській літератур <sup><a
-            href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F#cite_note-1">[1]</a><a href=""></a></sup>.
+            href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F#cite_note-1">[1]</a><a
+            href=""></a></sup>.
    </p>
    <h2>Історія створення</h2>
    <hr>
@@ -53,44 +54,86 @@
    <img
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F._%D0%9E%D0%B1%D0%BA%D0%BB%D0%B0%D0%B4%D0%B8%D0%BD%D0%BA%D0%B0_%D0%B2%D0%B8%D0%B4%D0%B0%D0%BD%D0%BD%D1%8F_1914_%D1%80.jpg/246px-%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F._%D0%9E%D0%B1%D0%BA%D0%BB%D0%B0%D0%B4%D0%B8%D0%BD%D0%BA%D0%B0_%D0%B2%D0%B8%D0%B4%D0%B0%D0%BD%D0%BD%D1%8F_1914_%D1%80.jpg"
       alt="Лісова пісня. Обкладинка видання 1914 р">
-      <h2>Персонажі</h2>
-      
-      <hr>
-      <h3>Головні персонажі</h3>
-      <ul>
-         <li>Мавка</li>
-         <li>Лукаш</li>
-      </ul>
-      <h3>Другорядні персонажі</h3>
-      <ul>
-        <li>Дядько Лев</li> 
-        <li>Мати Лукашева</li>
-        <li>Килина</li>
-        <li>Діти Килинині</li>
-        <li>Хлопчик</li>
-      </ul>
-      <h3>Міфічні персонажі</h3>
-      <ul type="circle">
-         <li>Перелесник</li>
-         <li>Той, що в скалі сидить (Марище)</li>
-         <li>Той, що греблі рве</li>
-         <li>Водяник</li>
-         <li>Русалка Польова</li>
-         <li>Русалка</li>
-         <li>Підсписок:
-            <ul type="square">
-               <li>Мавка</li>
-               <li>Лукаш</li>
-            </ul>
-         </li>
-         <li>Потерчата</li>
-         <li>Куць</li>
-         <li>Злидні</li>
-         <li>Доля</li>
-         <li>Пропасниця</li>
-         <li>Лісовик</li>
-      </ul>
+   <h2>Персонажі</h2>
 
+   <hr>
+   <h3>Головні персонажі</h3>
+   <ul>
+      <li>Мавка</li>
+      <li>Лукаш</li>
+   </ul>
+   <h3>Другорядні персонажі</h3>
+   <ul>
+      <li>Дядько Лев</li>
+      <li>Мати Лукашева</li>
+      <li>Килина</li>
+      <li>Діти Килинині</li>
+      <li>Хлопчик</li>
+   </ul>
+   <h3>Міфічні персонажі</h3>
+   <ul type="circle">
+      <li>Перелесник</li>
+      <li>Той, що в скалі сидить (Марище)</li>
+      <li>Той, що греблі рве</li>
+      <li>Водяник</li>
+      <li>Русалка Польова</li>
+      <li>Русалка</li>
+      <li>Підсписок:
+         <ul type="square">
+            <li>Мавка</li>
+            <li>Лукаш</li>
+         </ul>
+      </li>
+      <li>Потерчата</li>
+      <li>Куць</li>
+      <li>Злидні</li>
+      <li>Доля</li>
+      <li>Пропасниця</li>
+      <li>Лісовик</li>
+   </ul>
+   <table border="1">
+      <tr>
+         <th>Рік</th>
+         <th>Назва</th>
+         <th>Режисер</th>
+         <th>Театр</th>
+         <th>Актори</th>
+         <th>Примітки</th>
+      </tr>
+      <tr>
+         <td>1914</td>
+         <td>«Лісова пісня»</td>
+         <td></td>
+         <td>Експериментальний «Театр німих» під керівництвом Андріяша Лу і Вілми Балей</td>
+         <td></td>
+         <td>ЗМІ<sup><a
+                  href="https://uk.wikipedia.org/wiki/%D0%9B%D1%96%D1%81%D0%BE%D0%B2%D0%B0_%D0%BF%D1%96%D1%81%D0%BD%D1%8F#cite_note-%D0%A0%D0%B0%D0%B9%D0%BE%D0%BD_2023-2">[2]</a></sup>
+         </td>
+      </tr>
+      <tr>
+         <td>1918 22 листопада</td>
+         <td>«Лісова пісня»</td>
+         <td><a
+               href="https://uk.wikipedia.org/wiki/%D0%97%D0%B0%D0%B3%D0%B0%D1%80%D0%BE%D0%B2_%D0%9E%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80_%D0%9B%D0%B5%D0%BE%D0%BD%D1%96%D0%B4%D0%BE%D0%B2%D0%B8%D1%87">Олександр
+               Загаров</a></td>
+         <td><a
+               href="https://uk.wikipedia.org/wiki/%D0%94%D0%B5%D1%80%D0%B6%D0%B0%D0%B2%D0%BD%D0%B8%D0%B9_%D0%B4%D1%80%D0%B0%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%BD%D0%B8%D0%B9_%D1%82%D0%B5%D0%B0%D1%82%D1%80">Державний
+               драматичний театр </a>(м. Київ)</td>
+         <td></td>
+         <td></td>
+      </tr>
+      <tr>
+         <td>1919 4 серпня</td>
+         <td>«Лісова пісня»</td>
+         <td><a
+               href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B2%D0%B0%D0%BB%D0%B5%D1%80%D1%96%D0%B4%D0%B7%D0%B5_%D0%86%D0%B2%D0%B0%D0%BD_%D0%9F%D0%B5%D1%82%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Іван
+               Кавалерідзе</a>
+         </td>
+         <td>Український драматичний театр Роменської «Просвіти»</td>
+         <td></td>
+         <td></td>
+      </tr>
+   </table>
 </body>
 
 </html>
