--- a/lesy_ukrainka/index.html
+++ b/lesy_ukrainka/index.html
@@ -133,6 +133,45 @@
          <td></td>
          <td></td>
       </tr>
+      <tr>
+         <td>1924</td>
+         <td>«Лісова пісня»</td>
+         <td>Євген Коханенко</td>
+         <td><a
+               href="https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9_%D0%B0%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D1%96%D1%87%D0%BD%D0%B8%D0%B9_%D0%B4%D1%80%D0%B0%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%BD%D0%B8%D0%B9_%D1%82%D0%B5%D0%B0%D1%82%D1%80_%D1%96%D0%BC%D0%B5%D0%BD%D1%96_%D0%86%D0%B2%D0%B0%D0%BD%D0%B0_%D0%A4%D1%80%D0%B0%D0%BD%D0%BA%D0%B0">Київський
+               театр ім. Івана Франка</a></td>
+         <td></td>
+      </tr>
+   </table>
+   <br>
+   <br>
+   <br>
+   <table border="1">
+      <tr>
+         <th colspan="2">Творчість Лесі Українки</th>
+      </tr>
+      <tr>
+         <th>Поезія</th>
+         <td><b>Збірки:</b> На крилах пісень (1892) · Думи і мрії (1899) · Відгуки (1902) <br>
+            <b>Поеми:</b> Русалка (1887) · Самсон (1892) · Місячна легенда · Роберт Брюс, король шотландський (1894) · Давня
+            казка (1896) · Одно слово · Віла-посестра · Якутська поема · Ізольда Білорука · Що дасть нам силу? · Орфеєве
+            чудо · Про велета</td>
+      </tr>
+      <tr>
+         <th>Драматургія</th>
+         <td>Блакитна троянда (1896) · Прощання (1896) · Одержима (1901) · Вавилонський полон · На руїнах (1904) ·
+            Осіння казка (1905) · Три хвилини · В катакомбах (1905) · В дому роботи, в країні неволі · Кассандра (1906)
+            · Айша та Мохаммед · У пущі · На полі крові · Йоганна, жінка Хусова · Руфін і Прісцілла (1910) · Бояриня
+            (1910) · <b>Лісова пісня</b> (1911) · Адвокат Мартіан (1911) · Камінний господар (1911) · Орфеєве чудо · Оргія
+            (1913)</td>
+      </tr>
+      <tr>
+         <th>Проза</th>
+         <td>Така її доля (1888) · Святий вечір! (1888) · Метелик (1890) · Весняні співи · Біда навчить (1891) · Чашка
+            (кін. 1880-х) · Лелія (1890) · Жаль (1890) · Пізно (1893) · Волинські образки · Школа · Щастя (1895) · Місто
+            смутку (1896) · Голосні струни · Ein Brief ins Weite · Над морем · Мгновение · Сліпець · Примара · Приязнь ·
+            Розмова · Враги</td>
+      </tr>
    </table>
 </body>
 
