--- a/ukranian/index.html
+++ b/ukranian/index.html
@@ -230,10 +230,10 @@
         апеляційних, вищих спеціалізованих судів та Верховного Суду України. Найвищим судовим органом у системі судів
         загальної юрисдикції є Верховний Суд України.
     </p>
-        <ul>Спеціалізовані суди:
-            <li>Господарські (обласні, апеляційні, касаційний)</li>
-            <li>Адміністративні (окружні, апеляційні, касаційний).</li>
-        </ul>
+    <ul>Спеціалізовані суди:
+        <li>Господарські (обласні, апеляційні, касаційний)</li>
+        <li>Адміністративні (окружні, апеляційні, касаційний).</li>
+    </ul>
 
     <h3>Політичні партії</h3>
     <p>
@@ -257,6 +257,150 @@
         <li>Фракція політичної партії "Всеукраїнське об'єднання «Батьківщина»</li>
         <li>Фракція політичної партії «Голос»</li>
     </ul>
+    <br>
+    <table border="1">
+        <tr>
+            <th colspan="5">Українські діячі періоду <a
+                    href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D1%80%D0%B5%D0%B2%D0%BE%D0%BB%D1%8E%D1%86%D1%96%D1%8F_(1917%E2%80%941921)">Визвольних
+                    змагань</a></th>
+        </tr>
+        <tr>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Hrushevskyi_Mykhailo_XX.jpg/136px-Hrushevskyi_Mykhailo_XX.jpg"
+                    alt="Михайло Грушевський (1866—1934)"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Pavlo_Skoropadsky_portrait%2C_colorized_by_Ruslan_Habanets.jpg/155px-Pavlo_Skoropadsky_portrait%2C_colorized_by_Ruslan_Habanets.jpg"
+                    alt="Павло Скоропадський
+                (1873—1945)"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Symon_Petlura._Photo_1920s.jpg/162px-Symon_Petlura._Photo_1920s.jpg"
+                    alt="Симон Петлюра
+                (1879—1926)"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Vynnychenko.jpg/157px-Vynnychenko.jpg"
+                    alt="Володимир Винниченко
+                (1880—1951)"></td>
+            <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/1921._%D0%9D%D0%B5%D1%81%D1%82%D0%BE%D1%80_%D0%9C%D0%B0%D1%85%D0%BD%D0%BE_%D0%B2_%D0%BB%D0%B0%D0%B3%D0%B5%D1%80%D0%B5_%D0%B4%D0%BB%D1%8F_%D0%BF%D0%B5%D1%80%D0%B5%D0%BC%D0%B5%D1%89%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%BB%D0%B8%D1%86_%D0%B2_%D0%A0%D1%83%D0%BC%D1%8B%D0%BD%D0%B8%D0%B8.jpg/138px-1921._%D0%9D%D0%B5%D1%81%D1%82%D0%BE%D1%80_%D0%9C%D0%B0%D1%85%D0%BD%D0%BE_%D0%B2_%D0%BB%D0%B0%D0%B3%D0%B5%D1%80%D0%B5_%D0%B4%D0%BB%D1%8F_%D0%BF%D0%B5%D1%80%D0%B5%D0%BC%D0%B5%D1%89%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%BB%D0%B8%D1%86_%D0%B2_%D0%A0%D1%83%D0%BC%D1%8B%D0%BD%D0%B8%D0%B8.jpg"
+                    alt="Нестор Махно
+                    (1888—1934)"></td>
+        </tr>
+        <tr>
+            <th><a
+                    href="https://uk.wikipedia.org/wiki/%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE_%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%B8%D0%B9">Михайло
+                    Грушевський</a><br>(1866—1934)
+            </th>
+            <th><a
+                    href="https://uk.wikipedia.org/wiki/%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE_%D0%A1%D0%BA%D0%BE%D1%80%D0%BE%D0%BF%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B8%D0%B9">Павло
+                    Скоропадський</a><br>(1873—1945)
+            </th>
+            <th><a
+                    href="https://uk.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BC%D0%BE%D0%BD_%D0%9F%D0%B5%D1%82%D0%BB%D1%8E%D1%80%D0%B0">Симон
+                    Петлюра <br>(1879—1926)</a>
+            </th>
+            <th><a
+                    href="https://uk.wikipedia.org/wiki/%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%92%D0%B8%D0%BD%D0%BD%D0%B8%D1%87%D0%B5%D0%BD%D0%BA%D0%BE">Володимир
+                    Винниченко</a><br>(1880—1951)
+            </th>
+            <th> <a
+                    href="https://uk.wikipedia.org/wiki/%D0%9D%D0%B5%D1%81%D1%82%D0%BE%D1%80_%D0%9C%D0%B0%D1%85%D0%BD%D0%BE">Нестор
+                    Махно</a><br>(1888—1934)
+            </th>
+        </tr>
+
+    </table>
+    <br>
+    <br>
+    <h3>Адміністративний поділ</h3>
+    <p><i>Докладніше: Адміністративний поділ України та Адміністративно-територіальна реформа в Україні (2015–2020)</i>
+    </p>
+    <p>
+        В Україні, яка є унітарною державою, існує єдиний вид територіального устрою: адміністративно-територіальний
+        устрій (поділ). Згідно зі ст. 133 Конституції України систему адміністративно-територіального устрою України
+        становлять: Автономна Республіка Крим, області, райони, міста, райони в містах, селища і села. Сучасна система
+        областей та районів України сформована з липня 2020 року, коли були утворені 136 районів (де-факто районів 140,
+        бо 14 районів у АР Крим будуть ліквідовані лише після деокупації) замість старих 460.
+
+        Станом на 1 січня 2021 року в Україні були такі адміністративно-територіальні одиниці: 1 автономна республіка —
+        Автономна Республіка Крим, 24 області, 140 районів, 461 місто (з них 187 — міста спеціального статусу,
+        республіканського, обласного значення; 2 міста загальнодержавного значення — Київ, столиця України, та
+        Севастополь), 108 районів у містах, 882 селища міського типу, 870 сільських рад, 27 205 сіл. З 15 квітня 2014
+        року внаслідок російської окупації Автономна Республіка Крим і м. Севастополь мають статус тимчасово окупованої
+        території України[209].
+
+        Для порівняння, станом на грудень 1965 року, в Україні було 394 райони, 370 міст, 828 селищ міського типу та 32
+        742 сільських населених пунктів.
+    </p>
+    <table border="1">
+        <tr>
+            <th><a
+                    href="https://uk.wikipedia.org/wiki/%D0%90%D0%B4%D0%BC%D1%96%D0%BD%D1%96%D1%81%D1%82%D1%80%D0%B0%D1%82%D0%B8%D0%B2%D0%BD%D0%B8%D0%B9_%D0%BF%D0%BE%D0%B4%D1%96%D0%BB_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8">Адміністративний
+                    поділ України</a>
+            </th>
+            <th colspan="4"><a
+                    href="https://uk.wikipedia.org/wiki/%D0%9E%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C">Області</a>
+            </th>
+        </tr>
+        <tr>
+            <td rowspan="3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Ukraine_%281991-2014%29_location_map.svg/400px-Ukraine_%281991-2014%29_location_map.svg.png"
+                    alt="Адміністративний поділ України">
+            </td>
+            <td>
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Prapor_Vinnytskoyi_oblasti.svg/22px-Prapor_Vinnytskoyi_oblasti.svg.png" alt="">Вінницька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Volyn_Oblast.svg/22px-Flag_of_Volyn_Oblast.svg.png" alt="">Волинська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Flag_of_Dnipropetrovsk_Oblast.svg/22px-Flag_of_Dnipropetrovsk_Oblast.svg.png" alt="">Дніпропетровська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Flag_of_Donetsk_Oblast.svg/22px-Flag_of_Donetsk_Oblast.svg.png" alt="">Донецька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Flag_of_Zhytomyr_Oblast.svg/22px-Flag_of_Zhytomyr_Oblast.svg.png" alt=""> Житомирська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_of_Transcarpathian_Oblast.svg/22px-Flag_of_Transcarpathian_Oblast.svg.png" alt="">Закарпатська</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Flag_of_Zaporizhia_Oblast.svg/22px-Flag_of_Zaporizhia_Oblast.svg.png" alt="">Запорізька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Volyn_Oblast.svg/22px-Flag_of_Volyn_Oblast.svg.png" alt="">Волинська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Flag_of_Dnipropetrovsk_Oblast.svg/22px-Flag_of_Dnipropetrovsk_Oblast.svg.png" alt="">Дніпропетровська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Flag_of_Donetsk_Oblast.svg/22px-Flag_of_Donetsk_Oblast.svg.png" alt="">Донецька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Flag_of_Zhytomyr_Oblast.svg/22px-Flag_of_Zhytomyr_Oblast.svg.png" alt=""> Житомирська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_of_Transcarpathian_Oblast.svg/22px-Flag_of_Transcarpathian_Oblast.svg.png" alt="">Закарпатська</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Flag_of_Mykolaiv_Oblast.svg/22px-Flag_of_Mykolaiv_Oblast.svg.png" alt="">Миколаївська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Volyn_Oblast.svg/22px-Flag_of_Volyn_Oblast.svg.png" alt="">Волинська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Flag_of_Dnipropetrovsk_Oblast.svg/22px-Flag_of_Dnipropetrovsk_Oblast.svg.png" alt="">Дніпропетровська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Flag_of_Donetsk_Oblast.svg/22px-Flag_of_Donetsk_Oblast.svg.png" alt="">Донецька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Flag_of_Zhytomyr_Oblast.svg/22px-Flag_of_Zhytomyr_Oblast.svg.png" alt=""> Житомирська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_of_Transcarpathian_Oblast.svg/22px-Flag_of_Transcarpathian_Oblast.svg.png" alt="">Закарпатська</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Kharkiv_Oblast.svg/22px-Flag_of_Kharkiv_Oblast.svg.png" alt="">Харківська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Volyn_Oblast.svg/22px-Flag_of_Volyn_Oblast.svg.png" alt="">Волинська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Flag_of_Dnipropetrovsk_Oblast.svg/22px-Flag_of_Dnipropetrovsk_Oblast.svg.png" alt="">Дніпропетровська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Flag_of_Donetsk_Oblast.svg/22px-Flag_of_Donetsk_Oblast.svg.png" alt="">Донецька</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Flag_of_Zhytomyr_Oblast.svg/22px-Flag_of_Zhytomyr_Oblast.svg.png" alt=""> Житомирська</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_of_Transcarpathian_Oblast.svg/22px-Flag_of_Transcarpathian_Oblast.svg.png" alt="">Закарпатська</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <th colspan="2">Автономія</th>
+            <th colspan="2">Міста державного значення</th>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Flag_of_Crimea.svg/22px-Flag_of_Crimea.svg.png" alt="">Автономна Республіка Крим</li>
+                </ul>
+            </td>
+            <td colspan="2">
+                <ul>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Flag_of_Kiev.svg/22px-Flag_of_Kiev.svg.png" alt="">Київ</li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Flag_of_Sevastopol.svg/22px-Flag_of_Sevastopol.svg.png" alt="">Севастополь</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+    <br>
+
 </body>
 
 </html>
